--- a/MLP_BringBackTheSun.ipynb
+++ b/MLP_BringBackTheSun.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Multilayer Perceptron w Pre Processing\n",
-    "CandNo: 150389"
+    "# Multilayer Perceptron w Pre Processing\n"
    ]
   },
   {
